# NeoCode

./: .gitignore  .luarc.json  CLAUDE.md  Config  init.lua  installer.py  readme.md  scratch.lua  scratch.ts  todo.md
configNectar/: Cargo.toml
configNectar/src/: helpers.rs  install-packer.ps  main.rs
lua/: autocommands.lua  icons.lua  keymap.lua  neovide.lua  packer-config.lua  plug-load.lua  plugins.lua  settings.lua  steelseries.lua  visual.lua
lua/lsp/: cmp.lua  handlers.lua  init.lua  lsp-installer.lua  lsp-signature.lua  lua-dev.lua  null-ls.lua
lua/lsp-old/: handlers.lua  init.lua  lsp-installer.lua  null-ls.lua
lua/lsp-simple/: init.lua
lua/pluginconfig/: cmp.lua  lline.lua  lsp-setup.lua  lsp.lua  nvimtree.lua  snippy.lua
lua/plugins/: alpha.lua  bufferline.lua  cmp.lua  cokeline.lua  dressing.lua  feline.lua  gps.lua  indent-blankline.lua  legendary-vscode.lua  legendary.lua  lline.lua  lspsaga.lua  lualine.lua  neorg.lua  nvim-lines.lua  nvim-tree.lua  project.lua  session-manager.lua  statusline.lua  symbol-outline.lua  telescope.lua  toggleterm.lua  transparent.lua  treesitter.lua  (+6 more)
neoCodeInstaller/: Cargo.toml  NeocodeInstallerWindows
neoCodeInstaller/.cargo/: config.toml
neoCodeInstaller/src/: helpers-macos.rs  helpers.rs  helpersLinux.rs  helpersWin.rs  installers.rs  linux.rs  main.rs  osx.rs  refresh.ps  win.rs
neoCodeInstaller/user-template/: init.lua  keybinds.lua  plugins.lua  settings.lua
nvim-config/: init.lua
nvim.backup/: init.lua  lua
plugin/: packer_compiled.lua
plugin.old/: packer_compiled.lua
static/: neovim.cat
(+43 files in other folders)
