[package]
name = "NeocodeInstaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powershell_script = "0.2.1"
predicates = "1.0"
run_script = "*"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2"
which = "4.2.4"
