[package]
name = "neocode_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
predicates = "1.0"
run_script = "*"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2"
which = "4.2.4"
fs_extra = "1.2.0"
